# fix9gag

./: .gitignore  Cargo.toml  Dockerfile  README.md  fix9gag.example.toml  wrangler.example.toml
src/: lib.rs  main.rs  mod.rs
src/axum_runner/: direct_router.rs  mod.rs  oembed_router.rs  redirect_middleware.rs
src/cloudflare_runner/: config.rs  kv.rs  macros.rs  mod.rs  pseudo_main.rs
src/cloudflare_runner/handlers/: direct_handler.rs  mod.rs  oembed_handler.rs
src/config/: config_struct.rs  mod.rs  validators.rs
src/core/: embed_html_generator.rs  mod.rs  oembed_json_generator.rs  structs.rs
src/errors/: http.rs
src/page_manipulation/: html_fetcher.rs  mod.rs
src/page_manipulation/broken_json/: extractor.rs  input_structs.rs  interest_extractor.rs  interest_to_emoji.rs  mod.rs  output_struct.rs
src/page_manipulation/builders/: ascii_poll_builder.rs  description_builder.rs  html_builder.rs  mod.rs  oembed_url_builder.rs
src/page_manipulation/ld_json/: extractor.rs  mod.rs  structs.rs
src/shared/: mod.rs  print.rs  utils.rs
tests/expected/: gif.html  image.html  poll_ended.html  poll_inprogress.html  video.html
tests/mocks/: gif.html  image.html  poll_ended.html  poll_inprogress.html  video.html
